# crewai_create_template

./: .gitignore  README.md  pyproject.toml  report.md
src/created_crew/: crew.py  main.py
